--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
 server.port:8089
-#spring.data.mongodb.uri: mongodb+srv://Lokesh:Lokesh@webflux-app.6pmmcb2.mongodb.net/test
-
-#spring.data.mongodb.uri=mongodb://localhost:27017/Databases
-spring.data.mongodb.uri: mongodb+srv://Lokesh:Lokesh@webflux-app.6pmmcb2.mongodb.net/user-service
-spring.data.mongodb.database=user-service
+spring.data.mongodb.uri: mongodb+srv://Lokesh:Lokesh@webflux-app.6pmmcb2.mongodb.net/task-app
+spring.data.mongodb.database=task-app
